ladminai-appointment/main/default/objects/Appointment_Service__c/Appointment_Service__c.object-meta.xml
<CustomObject><allowInChatterGroups>false</allowInChatterGroups><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><externalSharingModel>Private</externalSharingModel><label>Appointment Service</label><nameField><label>Service Name</label><trackFeedHistory>false</trackFeedHistory><type>Text</type></nameField><pluralLabel>Appointment Services</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility></CustomObject>