ladminai-appointment/main/default/objects/Appointment_Service__c/fields/Active__c.field-meta.xml
<CustomField><fullName>Active__c</fullName><defaultValue>true</defaultValue><label>Active</label><type>Checkbox</type><trackHistory>true</trackHistory></CustomField>