ladminai-appointment/main/default/objects/Appointment_Service__c/fields/Buffer_Before_Minutes__c.field-meta.xml
<CustomField><fullName>Buffer_Before_Minutes__c</fullName><defaultValue>0</defaultValue><externalId>false</externalId><label>Buffer Before Minutes</label><precision>3</precision><required>true</required><scale>0</scale><type>Number</type><unique>false</unique></CustomField>