ladminai-appointment/main/default/objects/Appointment_Service__c/fields/Description__c.field-meta.xml
<CustomField><fullName>Description__c</fullName><label>Description</label><length>1000</length><type>LongTextArea</type><visibleLines>4</visibleLines></CustomField>