ladminai-appointment/main/default/objects/Appointment_Service__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField><fullName>Duration_Minutes__c</fullName><defaultValue>30</defaultValue><externalId>false</externalId><label>Duration Minutes</label><precision>3</precision><required>true</required><scale>0</scale><type>Number</type><unique>false</unique></CustomField>